Migrate to Sprint Boot 2 / Spring 5 / JDK 9